--- a/Lifehistory/app/static/app/content/site.css
+++ b/Lifehistory/app/static/app/content/site.css
@@ -6,7 +6,7 @@
 }
 
 
-body .modal fade {
+body .modal-dialog {
     /* new custom width */
     width: 1000px;
     /* must be half of the width, minus scrollbar on the left (30px) */
