--- a/Lifehistory/app/templates/app/lifehistory.html
+++ b/Lifehistory/app/templates/app/lifehistory.html
@@ -8,11 +8,11 @@
 {% if user.is_authenticated %}
         
 <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-6">
-        <h2 style="text-align:center">Welcome to the Life History Database </h2>        
+    
+    <div class="col-md-12">
+        <h2 style="text-align:center">Welcome to the Marine Bird Life History Database </h2>        
     </div>
-    <div class="col-md-3"></div>
+    
     <div class="col-md-12"><hr /></div>
     
     <div class="viewwindow" id="viewwindow">
@@ -21,18 +21,34 @@
             <h3 style="text-align:center">To begin, choose an action: </h3>        
         </div>
         <div class="col-md-4"> </div>
-        <div class="col-md-12" style="text-align:center"><p><button class="btn btn-default" onclick="OpenSearch()">Search the Database &raquo;</button></p></div>
-        <div class="col-sm-12" style="text-align:center"><p><button class="btn btn-default" onclick="OpenAdd()">Add new records &raquo;</button></p></div>
+        <div class="col-md-12" style="text-align:center"><p><button class="btn btn-info" onclick="OpenSearch()"><span class="glyphicon glyphicon-search"></span> Search the Database &raquo;</button></p></div>
+        {% if user.is_superuser %}    
+            <div class="col-sm-12" style="text-align:center"><p><a href="/admin/app/species/add/" class="btn btn-warning"><span class="glyphicon glyphicon-plus"></span> Add new SPECIES &raquo;</a> * Superusers Only</p></div>
+        {% endif %}
+        <div class="col-sm-12" style="text-align:center"><p><button class="btn btn-info" onclick="OpenAdd()"><span class="glyphicon glyphicon-plus"></span> Add new TRAITS for existing species &raquo;</button></p></div>
+        <div class="col-sm-12" style="text-align:center"><p><a href="/downloadall" class="btn btn-danger"><span class="glyphicon glyphicon-floppy-save"></span> Dump All Data to CSV</a> * Do this at least once per week to local machine</p></div>
+    
+        <div class="col-sm-12"><hr /></div>
+        <div class="col-sm-12" style="text-align:center"><h4>Access to the life history database is granted to limited individuals to date. Please keep your login information private and do not share
+            the database or URL with anyone until you are granted permission.</h4></div>
+    
+        {% if user.is_superuser %}
+        <div class="col-sm-12" style="text-align:center">
+             <h3> If you are seeing this message, you are a Superuser... only Superusers have the ability to create new users or add species to the database. </h3>
+        </div>
+        {% endif %}
     </div>
     
 </div>
 
 
+
+
+
 {% else %}
     <div class="row">
         <div class="col-md-12">
-            <h2> You are not logged in... please <a href="{% url 'login' %}">log in</a> to continue...</h2>
-            <a hre
+            <h2> You are not logged in... please <a href="{% url 'login' %}">log in</a> to continue...</h2>            
         </div>
     </div>
     <p><a class="btn btn-default" href="/login">Log In &raquo;</a></p>
