--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,7 +5,7 @@
 <head>
     <!-- NOTE - ALL html files must be saved as utf-8 without encoding to avoid problems with layout --> 
     <meta charset="UTF-8" />
-    <meta name="description" content="MAPPPD is an open access decision support tool to help understand penguin population dynamics in the Antarctic" />       
+    <meta name="description" content="The Seabird Life History Database is for exploring life history data on seabird biology" />       
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">    
      
