--- a/app/templates/app/dbaddother.html
+++ b/app/templates/app/dbaddother.html
@@ -32,7 +32,7 @@
                     data: { species: species, trtid: trtid, username: username, dt: dt, traitopt: traitopt, citation: citation, traits: traits },
                     success: function () {
                         var dat = '<h3 style="text-align:center"><span class="glyphicon glyphicon-ok" style="color:green"></span> Data saved...  </h3>'
-                        var clr = '<div class="col-md-3" style="text-align:center"><button class="btn btn-danger" onclick="OpenAddother()"><span class="glyphicon glyphicon-fire"></span> Clear sheet &raquo;</button></div>'
+                        var clr = '<div class="col-md-3" style="text-align:center"><button class="btn btn-danger" onclick="CallIn('.concat("'/dbaddother/','.viewwindow')").concat('"').concat('><span class="glyphicon glyphicon-fire"></span> Clear sheet &raquo;</button></div>')
 
                         $('#savesuccess').html(dat);
                         $('#clrbtn').html(clr);
@@ -70,7 +70,7 @@
         <div class="col-md-1">
             <p><a href="/lifehistory" class="btn btn-primary btn-large">&laquo; Back</a></p>
         </div>
-        <div class="col-md-6" style="text-align:center"><button class="btn btn-info" onclick="OpenAdd()"><span class="glyphicon glyphicon-plus"></span> Add numeric traits &raquo;</button></div>                      
+        <div class="col-md-6" style="text-align:center"><button class="btn btn-info" onclick="CallIn('/dbadd/','.viewwindow')"><span class="glyphicon glyphicon-plus"></span> Add numeric traits &raquo;</button></div>                      
         <div class="col-md-3" id="clrbtn"></div>
         <div class="col-md-12">
             {% crispy modelform %}{% csrf_token %}
