--- a/app/templates/app/lifehistory.html
+++ b/app/templates/app/lifehistory.html
@@ -64,6 +64,16 @@
         <div class="col-md-4"><hr style="border-color:rgba(255,255,255,0)" /></div>
         <div class="col-sm-6" style="text-align:left"><a href="/admin/auth/user/add/" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-plus-sign"></span> Add User</a></div>
         <div class="col-md-2"><hr style="border-color:rgba(255,255,255,0)" /></div>
+        
+
+        <div class="col-md-12"><hr style="border-color:black" /></div>
+        <div class="col-md-4"><a href="/downloadALL/?DL=dlNum" class="btn btn-info"><span class="glyphicon glyphicon-floppy-save"></span>Download all morphology data</a></div>
+        <div class="col-md-4"><a href="/downloadALL/?DL=dlChar" class="btn btn-info"><span class="glyphicon glyphicon-floppy-save"></span>Download all life history data</a></div>
+        <div class="col-md-4"><a href="/downloadALL/?DL=dlCite" class="btn btn-info"><span class="glyphicon glyphicon-floppy-save"></span>Download all citations</a></div>
+    
+
+
+
         {% endif %}
     </div>
     
